# venturi

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
benches/: arithmetic.js  arithmetic.py  arithmetic.vt  run_benchmarks.sh  throughput.rs
gui-app/: card.vt  data.vt  statusbar.vt  titlebar.vt
man/: venturi.1
src/: error.rs  lib.rs  main.rs
src/ast/: mod.rs
src/codegen/: html.rs  mod.rs  react.rs  xml.rs
src/compiler/: mod.rs
src/graph/: mod.rs
src/gui/: egui_app.rs  iced_app.rs  mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/permissions/: mod.rs
src/pits/: mod.rs
src/runtime/: mod.rs
src/validator/: mod.rs
src/vcbin/: mod.rs
src/vm/: bytecode.rs  mod.rs
tests/: cycle_detection.rs  data_engineering.rs  llm_benchmarks.rs  security.rs  stress_test.rs  ui_reactivity.rs
