[package]
name = "venturi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "venturi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
petgraph = "0.6"
sha2 = "0.10"
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
eframe = "0.31"
iced = "0.13"
winit = "0.30"
